kubernetes/apps/observability/kromgo/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kromgo
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kromgo.f9.casa`)
      kind: Rule
      services:
        - name: kromgo
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
